Fix @test rendering. Fixes issue #41.

--- a/site/offline.html
+++ b/site/offline.html
@@ -11,7 +11,13 @@
 
 <body>
 
-<nav><div id="small-title">Hurmet</div></nav>
+<nav>
+  <div id="small-title">Hurmet</div>
+  <ul>
+    <li><a href="/manual.html#calculation-tutorial" target="_blank">Tutorial</a></li>
+    <li><a href="/manual.html" target="_blank">Documentation</a></li>
+  </ul>
+</nav>
 
 <div id="promotion">
   <div id="title">Hurmet</div>
