--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hurmet.org</title>
   <link rel="manifest" href="/app.webmanifest">
-  <link rel="icon" href="./images/favicon.svg">
+  <link rel="icon" href="/images/favicon.svg">
   <link rel="stylesheet" href="/styles.min.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
   <script>
