Convert navicon to inline SVG

--- a/site/manual.html
+++ b/site/manual.html
@@ -1266,7 +1266,7 @@ const titleRegEx = /([^.\\/]+)\.md$/;  // A helper.
 </ul>
 </div>
 </nav>
-<div id="mobile-nav"><input id="navicon-checkbox" type="checkbox" name="navicon-checkbox" /><label for="navicon-checkbox" id="navicon"><img src="./images/navicon.svg"  alt='≡' width='24'></label>
+<div id="mobile-nav"><input id="navicon-checkbox" type="checkbox" name="navicon-checkbox" /><label for="navicon-checkbox" id="navicon"><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512px' height='512px'%3E%3Crect x='96' y='241' width='320' height='32'/%3E%3Crect x='96' y='145' width='320' height='32'/%3E%3Crect x='96' y='337' width='320' height='32'/%3E%3C/svg%3E"  alt='≡' width='24'></label>
   <ul id="mobile-menu">
     <li><a href="#editor-basics">Editor</a></li>
     <li><a href="#calculation-forms">Calculations</a></li>
