Enable more args in hypot function

--- a/site/manual.html
+++ b/site/manual.html
@@ -650,8 +650,8 @@ ${w_dead}	30	40`` &#x27;lbf/ft&#x27; = %% lbf/ft</code></pre><p>Note that you mu
 <dd><p>Greatest common divisor of two integers.</p></dd>
 <dt id='hcat'>hcat(<em>v</em>, <em>x</em>)</dt>
 <dd><p>Horizontal concatenation of: two strings, or two matrices, or an element onto a vector, or a variable onto a map, or a vector onto a data frame.</p></dd>
-<dt id='hypot'>hypot(<em>x</em>, <em>y</em>)</dt>
-<dd><p><span class='hurmet-calc' data-entry='√(x² + y²)'><math><msqrt><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>+</mo><msup><mi>y</mi><mn>2</mn></msup></mrow></msqrt></math></span>   …done in a way that avoids overflow. Real numbers only.</p></dd>
+<dt id='hypot'>hypot(<em>x</em><em><sub>1</sub></em>, <em>x</em><em><sub>2</sub></em>, …, <em>x</em><em><sub>n</sub></em>)</dt>
+<dd><p><span class='hurmet-calc' data-entry='√(x_1^2 + x_2^2 + ⋯ + x_n^2)'><math><msqrt><mrow><mi>x</mi><msup><msub><mrow></mrow><mtext>1</mtext></msub><mn>2</mn></msup><mo>+</mo><mi>x</mi><msup><msub><mrow></mrow><mtext>2</mtext></msub><mn>2</mn></msup><mo>+</mo><mo>⋯</mo><mo>+</mo><mi>x</mi><msup><msub><mrow></mrow><mtext>n</mtext></msub><mn>2</mn></msup></mrow></msqrt></math></span>   …done in a way that avoids overflow. Real numbers only.</p></dd>
 <dt id='imag'>imag(<em>z</em>)</dt>
 <dd><p>Imaginary part of a complex number.</p></dd>
 <dt id='isnan'>isnan(<em>x</em>)</dt>
