Move currency exchange rates to HTML page.

--- a/site/index.html
+++ b/site/index.html
@@ -21,6 +21,7 @@
         }
       });
     </script>
+  <script>const currencyExchangeRates = { AUD: "1.7357", BGN: "1.9558", BRL: "6.3688", CAD: "1.5731", CHF: "0.9608", CNY: "7.8929", CZK: "24.963", DKK: "7.4587", EUR: "1.0", GBP: "0.84374", HKD: "8.4784", HUF: "401.78", IDR: "17937.42", ILS: "3.9800", INR: "95.1455", ISK: "146.90", JPY: "161.52", KRW: "1586.56", MXN: "22.2142", MYR: "4.8155", NOK: "11.6340", NZD: "1.9130", PHP: "62.518", PLN: "4.2003", RON: "4.9771", SEK: "10.9815", SGD: "1.4535", THB: "36.855", TRY: "39.9270", USD: "1.0912", ZAR: "19.9287" }</script>
 </head>
 
 <body>
