Enable a #hash after sample page URL

--- a/preview/index.html
+++ b/preview/index.html
@@ -49,7 +49,7 @@
    <p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
    <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
-   <h2>Drawings</h2>
+   <h2 id="drawings">Drawings</h2>
 
   <p>Hurmet’s <em>draw</em> environment enables function plotting. For instance, to get a sine wave, one can write the following code into a math zone:</p>
 
