Update docs on how to paste.

--- a/site/guides/Why-Hurmet.html
+++ b/site/guides/Why-Hurmet.html
@@ -52,7 +52,7 @@
 <h2 id='reason-#4:-rapid-adjustment'>Reason #4: Rapid Adjustment</h2>
 <p>Need to make a change? No problem. Re-define a variable with a new value. Hurmet will immediately recalculate all the dependencies.</p>
 <h2 id='reason-#5:-chatbot-coordination'>Reason #5: Chatbot Coordination</h2>
-<p>Hurmet makes it easy to co-author with a chatbot. Hurmet’s native file format is Markdown, a light-weight markup format. Chatbots know Markdown well. Just tell your chatbot to write its work in Markdown. Then copy it and invoke the <strong>M▾|Paste from Markdown</strong> command.</p>
+<p>Hurmet makes it easy to co-author with a chatbot. Hurmet’s native file format is Markdown, a light-weight markup format. Chatbots know Markdown well. Just tell your chatbot to write its work in Markdown. Then copy it and paste into your document with Ctrl-V.</p>
 
 </div></article>
 </body>
