Document non-breaking space

--- a/site/manual.html
+++ b/site/manual.html
@@ -250,7 +250,7 @@ print &quot;Hi!&quot;</code></pre></td></tr>
 <tr><td></td><td></td><td></td><td></td><td>ZZ</td><td>ℤ</td><td></td><td></td></tr></table>
 <p>The font corrections, e.g., <code>bb …</code> work on any letter from A to Z or a to z. You can also make one those letters bold by typing it and then typing <strong>Ctrl+B</strong>.</p>
 <p><code>--&gt;</code>, <code>&lt;--</code>, and <code>&lt;--&gt;</code> will auto correct into extensible arrows, as in: <span class='hurmet-calc' data-entry='A ⟶"note" B'><math><mrow><mi>A</mi><mrow><mspace width="0.2778em"></mspace><mover accent="false"><mo stretchy="true" lspace="0" rspace="0">→</mo><mover><mrow><mspace width="0.4286em"></mspace><mtext>note</mtext><mspace width="0.4286em"></mspace></mrow><mspace width="3.5000em"></mspace></mover></mover><mspace width="0.2778em"></mspace></mrow><mi>B</mi></mrow></math></span>.</p>
-<p><code>&lt;space&gt;</code> auto-corrects to <code>˽</code> in the text editor, which renders as a space.</p>
+<p>The <code>˽</code> character is Hurmet’s non-breaking space. To get it, type <code>\</code> and hit the space bar twice.</p>
 <h4 id='display-selectors'>Display Selectors</h4>
 <table class="c1c c2c"><tr><th>Display selector</th>
 <th>Display Selector for Unit-Aware Calculation</th>
