--- a/site/manual.html
+++ b/site/manual.html
@@ -19,7 +19,7 @@
 <h3 id='editor-basics'>Editor Basics</h3>
 <p>Hurmet provides rich-text editing capabilities. You can apply styles to a document range by selecting text, then clicking one of the menu bar buttons:</p>
 <table><tr><td><strong>≡</strong></td><td>Navigate…</td></tr>
-<tr><td><br><strong>File▾</strong></td><td>Open…, Save…, Save as…, <br>Create a permalink URL,<br>Take a snapshot, Show diff, <br>Set Page Size, Print</td></tr>
+<tr><td><br><strong>File▾</strong></td><td>Open…, Save, Save as…, <br>Create a permalink URL,<br>Take a snapshot, Show diff, <br>Set Page Size, Print</td></tr>
 <tr><td><br><strong>Doc▾</strong></td><td>Set Decimal, Font size, <br>Draft Mode, Print header, <br>Delete all comments</td></tr>
 <tr><td><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M0 9a7.982 7.982 0 0 0 2.709 6l1.323-1.5a6 6 0 1 1 8.212-8.743L10.001 7h6V1l-2.343 2.343A8 8 0 0 0 .001 9z'/%3E%3C/svg%3E" alt="recalc"> <code></code></td><td>Recalculate all</td></tr>
 <tr><td><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M11.904 16C13.681 12.781 13.98 7.87 7 8.034V12L1 6l6-6v3.881c8.359-.218 9.29 7.378 4.904 12.119z'/%3E%3C/svg%3E" alt="undo">  <img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M9 3.881V0l6 6-6 6V8.034C2.02 7.87 2.319 12.781 4.096 16-.29 11.259.641 3.663 9 3.881z'/%3E%3C/svg%3E" alt="redo"></td><td>Undo, Redo</td></tr>
